<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.adquisicion_datos.AdquisicionDatos"
    android:layout_marginTop="120dp">

    <LinearLayout
        android:id="@+id/lay_datos_adq_modelo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
        android:id="@+id/img_mi_vehiculo_adq"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/aceptar"
        android:src="@drawable/carro"
        android:layout_marginEnd="10dp"/>

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

        <EditText
            android:id="@+id/edt_marca_adq_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_marca"/>
        <EditText
            android:id="@+id/edt_anio_adq_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_modelo"/>
    </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_linea_adq_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_linea"/>
        <EditText
            android:id="@+id/edt_combustible_adq_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_combustible"/>
    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_datos_adq_correctamente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarAdqModelo"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_below="@id/lay_datos_adq_modelo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/lay_gal_ingresados_modelo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/btn_datos_adq_correctamente"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_gal_ingresados_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gal. Ingresados:"
            android:textSize="28sp"/>

        <EditText
            android:id="@+id/edt_gal_ingresados_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_registrar_adq_correctamente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrar Información"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_below="@id/lay_gal_ingresados_modelo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

</RelativeLayout>