<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_mapa"
    android:layout_marginTop="50dp"
    android:paddingTop="5dp"
    tools:context="fragments.RendimientoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_box"
        android:layout_marginRight="@dimen/margin_box"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGalones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/size_text"
                android:text="@string/txt_galones"/>

            <TextView
                android:id="@+id/tvDistancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/size_text"
                android:text="@string/txt_distancia"
                />

            <ImageButton
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_imag_btn_refresh"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_refresh"
                android:contentDescription="@string/content_image_btn_refresh" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRecorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_box"
        android:layout_marginRight="@dimen/margin_box"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/iniciar2"
        />

</RelativeLayout>